Fixed workspace width when content is too wide

--- a/src/workspace/workspace-wrapper.component.css
+++ b/src/workspace/workspace-wrapper.component.css
@@ -8,7 +8,7 @@
 .visible {
   display: block;
   animation: fade_in_show 0.3s;
-  min-width: 50vw;
+  width: 50vw;
 }
 
 @keyframes fade_in_show {
